# particle-simulator

./: CMakeLists.txt  LICENSE  Particle.hpp  Partitioning.hpp  Physics.hpp  README.md  Render.hpp  main.cpp  particle-simulator
src/: Particle.hpp  Partitioning.hpp  Physics.hpp  Render.hpp  main.cpp
src/utilities/: ParticleColors.hpp  RandomNumberGenerator.hpp
tests/: Partitioning_tests.cpp  Physics_tests.cpp  partitioning_tests.cpp
